Usando metodo dinamico do modelo Entry para exibir se esta pago.
Para usar esse metodo e necessario assinar o objeto para se tornar do tipo entry.
Em outras palavras, é preciso usar Object.assign(new Entry(), element) de acordo 
com o que foi implementado no service.

--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -46,8 +46,8 @@
       <td class="text-right">
         <strong [class.text-success]="entry.type == 'revenue'" [class.text-danger]="entry.type == 'expense'">
           {{entry.amount}}
-        </strong>
-
+        </strong> <br>
+        <span class="badge badge-light">{{entry.paidText}}</span>
       </td>
       <td class="text-center">
         <a [routerLink]="[entry.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</a>
