--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -72,6 +72,23 @@
           </div>
         </div>
   
+        <div class="form-group col-md-2">
+          <label for="date">Data</label>
+          <p-calendar 
+            inputStyleClass="form-control" 
+            id="date" 
+            formControlName="date"
+            dataType="string"
+            dateFormat="dd/mm/yy"
+            [locale]="ptBR"
+            [showButtonBar]="true">
+          </p-calendar>
+
+          <div class="text-danger" *ngIf="entryForm.get('date').invalid && entryForm.get('date').touched">
+            <div *ngIf="entryForm.get('date').errors.required">Dado obrigatório</div>
+          </div>
+        </div>
+
         <div class="form-group col-md-8">
           <label for="description">Descrição</label>
           <input type="text" class="form-control" id="description"  formControlName="description">
