Finalizando arrumacao dos formulario
Usei o btn-group para dizer se foi pago ou nao usando um componente do bootstrap.

--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -88,13 +88,44 @@
             <div *ngIf="entryForm.get('date').errors.required">Dado obrigatório</div>
           </div>
         </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group col-md-2">
+          <label for="paid">Pago</label>
+          <div class="btn-group">
+            <label (click)="entryForm.get('paid').setValue(true)"  [class.active]="entryForm.get('paid').value == true" class="btn btn-outline-info">
+              Pago
+            </label>
+            <label (click)="entryForm.get('paid').setValue(false)"  [class.active]="entryForm.get('paid').value == false" class="btn btn-outline-info">
+              Pendente
+            </label>
+          </div>
+  
+          <div class="text-danger" *ngIf="entryForm.get('paid').invalid && entryForm.get('paid').touched">
+            <div *ngIf="entryForm.get('paid').errors.required">Dado obrigatório</div>
+          </div>
+        </div>
 
-        <div class="form-group col-md-8">
+        <div class="form-group col-md-8 ml-5">
           <label for="description">Descrição</label>
           <input type="text" class="form-control" id="description"  formControlName="description">
         </div>
-
       </div>
+
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="categoryId">Categoria</label>
+          <select type="text" class="form-control" id="categoryId" formControlName="categoryId">
+            <option value="1">Cat 1</option>
+            <option value="2">Cate 2</option>
+          </select>
+  
+          <div class="text-danger" *ngIf="entryForm.get('categoryId').invalid && entryForm.get('categoryId').touched">
+            <div *ngIf="entryForm.get('categoryId').errors.required">Dado obrigatório</div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
@@ -107,3 +138,7 @@
 
   <button [disabled]="submittingForm || entryForm.invalid" type="submit" class="btn btn-primary btn-lg float-right mt-3">Salvar</button>
 </form>
+<!-- 
+<pre>
+  {{entryForm.value | json}}
+</pre> -->
