--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 
-<form [formGroup]="entryForm" (submit)="submitForm()">
+<form [formGroup]="resourceForm" (submit)="submitForm()">
   <div class="card">
     <div class="card-header">
       Info sobre categoria
@@ -42,8 +42,8 @@
             <option *ngFor="let option of typeOptions" [value]="option.value">{{ option.text }}</option>
           </select>
 
-          <div class="text-danger" *ngIf="entryForm.get('type').invalid && entryForm.get('type').touched">
-            <div *ngIf="entryForm.get('type').errors.required">Dado obrigatório</div>
+          <div class="text-danger" *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
+            <div *ngIf="resourceForm.get('type').errors.required">Dado obrigatório</div>
           </div>
         </div>
 
@@ -51,9 +51,9 @@
           <label for="name">Lançamento</label>
           <input type="text" class="form-control" id="name" formControlName="name">
 
-          <div class="text-danger" *ngIf="entryForm.get('name').invalid && entryForm.get('name').touched">
-            <div *ngIf="entryForm.get('name').errors.required">Dado obrigatório</div>
-            <div *ngIf="entryForm.get('name').errors.minlength">Deve ter no minimo 2 caracteres</div>
+          <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
+            <div *ngIf="resourceForm.get('name').errors.required">Dado obrigatório</div>
+            <div *ngIf="resourceForm.get('name').errors.minlength">Deve ter no minimo 2 caracteres</div>
           </div>
         </div>
 
@@ -66,8 +66,8 @@
             <input [imask]="imaskConfig" type="text" class="form-control text-right" id="amount" formControlName="amount">
           </div>
 
-          <div class="text-danger" *ngIf="entryForm.get('amount').invalid && entryForm.get('amount').touched">
-            <div *ngIf="entryForm.get('amount').errors.required">Dado obrigatório</div>
+          <div class="text-danger" *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
+            <div *ngIf="resourceForm.get('amount').errors.required">Dado obrigatório</div>
           </div>
         </div>
   
@@ -83,8 +83,8 @@
             [showButtonBar]="true">
           </p-calendar>
 
-          <div class="text-danger" *ngIf="entryForm.get('date').invalid && entryForm.get('date').touched">
-            <div *ngIf="entryForm.get('date').errors.required">Dado obrigatório</div>
+          <div class="text-danger" *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
+            <div *ngIf="resourceForm.get('date').errors.required">Dado obrigatório</div>
           </div>
         </div>
       </div>
@@ -92,16 +92,16 @@
         <div class="form-group col-md-2">
           <label for="paid">Pago</label>
           <div class="btn-group">
-            <label (click)="entryForm.get('paid').setValue(true)"  [class.active]="entryForm.get('paid').value == true" class="btn btn-outline-info">
+            <label (click)="resourceForm.get('paid').setValue(true)"  [class.active]="resourceForm.get('paid').value == true" class="btn btn-outline-info">
               Pago
             </label>
-            <label (click)="entryForm.get('paid').setValue(false)"  [class.active]="entryForm.get('paid').value == false" class="btn btn-outline-info">
+            <label (click)="resourceForm.get('paid').setValue(false)"  [class.active]="resourceForm.get('paid').value == false" class="btn btn-outline-info">
               Pendente
             </label>
           </div>
   
-          <div class="text-danger" *ngIf="entryForm.get('paid').invalid && entryForm.get('paid').touched">
-            <div *ngIf="entryForm.get('paid').errors.required">Dado obrigatório</div>
+          <div class="text-danger" *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
+            <div *ngIf="resourceForm.get('paid').errors.required">Dado obrigatório</div>
           </div>
         </div>
 
@@ -118,8 +118,8 @@
             <option *ngFor="let category of categories" [value]="category.id">{{ category.name }}</option>
           </select>
   
-          <div class="text-danger" *ngIf="entryForm.get('categoryId').invalid && entryForm.get('categoryId').touched">
-            <div *ngIf="entryForm.get('categoryId').errors.required">Dado obrigatório</div>
+          <div class="text-danger" *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
+            <div *ngIf="resourceForm.get('categoryId').errors.required">Dado obrigatório</div>
           </div>
         </div>
       </div>
@@ -134,9 +134,9 @@
     </ul>
   </div>
 
-  <button [disabled]="submittingForm || entryForm.invalid" type="submit" class="btn btn-primary btn-lg float-right mt-3">Salvar</button>
+  <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary btn-lg float-right mt-3">Salvar</button>
 </form>
 <!-- 
 <pre>
-  {{entryForm.value | json}}
+  {{resourceForm.value | json}}
 </pre> -->
