Refatorando CategoryListComponent com BaseResourceListComponent

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -32,7 +32,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr  *ngFor="let category of categories">
+    <tr  *ngFor="let category of resources">
       <td>
         <strong>{{category.name}}</strong> <br>
         <small>{{category.description}}</small>
