Refatorando EntryListComponent com BaseResourceListComponent

--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -34,7 +34,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr  *ngFor="let entry of entries">
+    <tr  *ngFor="let entry of resources">
       <td>
         <strong>{{entry.name}}</strong> <br>
         <small class="text-success">{{entry.date}}</small> <br>
