Utilizando componente app-bread-crumb
Corrigindo o shared module utilizando o RouterModule para que o componente reconheca o property bind do routerLink.

--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,16 +1,6 @@
-<nav class="mb-5">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-      <a routerLink="/">Home</a>
-    </li>
-    <li class="breadcrumb-item">
-      <a routerLink="/categories">categorias</a>
-    </li>
-    <li class="breadcrumb-item active">
-      {{ this.pageTitle }}
-    </li>
-  </ol>
-</nav>
+<app-bread-crumb
+[items]="[{text: 'categorias', link: '/categories'}, {text: pageTitle}]"
+></app-bread-crumb>
 
 
 <div class="row mb-4">
