--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,17 +1,6 @@
-<nav class="mb-5">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item">
-      <a routerLink="/">Home</a>
-    </li>
-    <li class="breadcrumb-item">
-      <a routerLink="/entries">Lancamentos</a>
-    </li>
-    <li class="breadcrumb-item active">
-      {{ this.pageTitle }}
-    </li>
-  </ol>
-</nav>
-
+<app-bread-crumb
+[items]="[{text: 'Lancamentos', link: '/entries'}, {text: pageTitle}]"
+></app-bread-crumb>
 
 <div class="row mb-4">
   <div class="col-md-9">
