--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -2,19 +2,12 @@
 [items]="[{text: 'categorias'}]"
 ></app-bread-crumb>
 
-<div class="row mb-4">
-  <div class="col-md">
-    <h1 class="h2 border-left pl-2">
-      Lançamento
-    </h1>
-  </div>
-
-  <div class="col-md">
-    <a routerLink="new" class="btn btn-success float-right">
-      + Nova Lancamento
-    </a>
-  </div>
-</div>
+<app-page-header
+  page-title="Lançamentos"
+  button-text="+ Novo lançamento"
+  button-link="new"
+  button-class="btn-success"
+></app-page-header>
 
 <table class="table table-hover">
   <thead>
