--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -1,3 +1,91 @@
-<p>
-  reports works!
-</p>
+<app-bread-crumb
+[items]="[{text: 'Relatório de Receitas e Despesas'}]"
+></app-bread-crumb>
+
+<app-page-header
+  page-title="Relatório de Receitas e Despesas"
+  button-text=""
+  button-link=""
+  button-class=""
+></app-page-header>
+
+<div class="card">
+  <div class="card-header">
+    Selecione o Mes e ano para gerar os relatórios
+  </div>
+
+  <div class="card-body">
+    <div class="form-row">
+        <div class="form-group col-md-7">
+          <label #month for="month">Mês</label>
+          <select name="month" id="month" class="form-control">
+            <option value="">Selecione o Mês</option>
+            <option value="1">Janeiro</option>
+            <option value="2">Fevereiro</option>
+            <option value="3">Março</option>
+            <option value="4">Abril</option>
+            <option value="5">Maio</option>
+          </select>
+        </div>
+        
+        <div class="form-group col-md-5">
+          <label for="year">Ano</label>
+          <select #year name="year" id="year" class="form-control">
+            <option value="">Selecione um ano</option>
+            <option value="2016">2016</option>
+            <option value="2017">2017</option>
+            <option value="2018">2018</option>
+            <option value="2019">2019</option>
+            <option value="2020">2020</option>
+          </select>
+        </div>
+      </div>
+        
+    <div class="form-row">
+      <div class="col-md">
+        <button type="button" (click)="generateReports()" class="btn btn-primary float-right">
+          Gerar Relatórios
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="card-deck mt-5 mb-5">
+  <div class="card text-center text-white bg-success">
+    <div class="card-header">
+      Total de receitas
+    </div>
+    <div class="card-title">
+      1000
+    </div>
+  </div>
+  <div class="card text-center text-white bg-danger">
+    <div class="card-header">
+      Total de despesas
+    </div>
+    <div class="card-title">
+      1000
+    </div>
+  </div>
+  <div class="card text-center text-white bg-info">
+    <div class="card-header">
+      Saldo
+    </div>
+    <div class="card-title">
+      1000
+    </div>
+  </div>
+</div>
+
+<hr>
+
+<div class="row mt-5 mb-4">
+  <div class="col-md-6">
+    Gráfico de receitas   
+  </div>
+  
+  <div class="col-md-6">
+    Gráfico de colunas   
+  </div>
+</div>
