Adicionando propriedade show-button em PageHeaderComponent

--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -4,9 +4,7 @@
 
 <app-page-header
   page-title="Relatório de Receitas e Despesas"
-  button-text=""
-  button-link=""
-  button-class=""
+  [show-button]="false"
 ></app-page-header>
 
 <div class="card">
@@ -84,7 +82,7 @@
   <div class="col-md-6">
     Gráfico de receitas   
   </div>
-  
+
   <div class="col-md-6">
     Gráfico de colunas   
   </div>
